<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="#F0222020"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="200dp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:text="@string/login_page"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/Username"
            android:textColor="@color/white"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:inputType="text"
            android:textAlignment="center"
            android:background="@color/white"
            android:id="@+id/EUsername"
            android:textColor="@color/purple_500" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/Password"
            android:textColor="@color/white"
            android:text="@string/password"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_marginLeft="25dp"
            android:id="@+id/Epassword"
            android:textColor="@color/purple_500" />

    </LinearLayout>
    <CheckBox
        android:id="@+id/Cbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:checked="false"
        android:text="@string/I_am_not_a_robot"/>
    <Button
        android:drawableRight="@drawable/my"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/submit"
        android:text="@string/Login"/>
</LinearLayout>

