<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="#F0222020"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/first_name"/>
            <EditText
                android:id="@+id/Efirst_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/last_name"/>
            <EditText
                android:id="@+id/Elast_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Gender"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <RadioGroup
                android:id="@+id/gender_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/Male"
                android:onClick="checkButton"
                android:textColor="@color/white"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/Female"
                android:onClick="checkButton"
                android:textColor="@color/white"/>
            <RadioButton
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:onClick="checkButton"
                android:text="@string/Others"
                android:textColor="@color/white"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/Email"/>
            <EditText
                android:id="@+id/Eemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/country"/>
            <Spinner
                android:id="@+id/country_spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/code"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/Code"/>
            <EditText
                android:id="@+id/Ecode"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/black"
                android:inputType="phone"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/Mobile_No"/>
            <EditText
                android:id="@+id/Emobile_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/black"
                android:maxLines="10"
                android:minLines="10"
                android:inputType="phone"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/signup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/Password"/>
            <EditText
                android:id="@+id/Esignup_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:minLines="6"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="Confirm Password"/>
            <EditText
                android:id="@+id/Econfirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:minLines="6"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <Button
                    android:id="@+id/signup_id"
                    android:drawableRight="@drawable/sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_up"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                    <Button
                        android:id="@+id/reset_id"
                        android:drawableRight="@drawable/reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Reset"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
                <Button
                    android:id="@+id/login_id"
                    android:drawableRight="@drawable/my"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
